// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en Product Title debe mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className=" productDescription  undefined"
  >
    Coffe Mug - No Image
  </span>
</div>
`;

exports[`Pruebas en Product Title debe mostrar el componente correctamente con el titulo personalizado  1`] = `
<span
  className=" productDescription  undefined"
>
  Custom Product Title
</span>
`;
